gitops/inventory.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: inventory
      version: v1
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
      app.kubernetes.io/name: java
    name: inventory-v1
  spec:
    replicas: 1
    selector:
      app: inventory
      version: v1
      app.kubernetes.io/instance: inventory
    revisionHistoryLimit: 2
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        limits:
          cpu: 500m
          memory: 2Gi
        requests:
          cpu: 500m
          memory: 1Gi
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 3600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          sidecar.istio.io/inject: "true"
        labels:
          app: inventory
          version: v1
          app.kubernetes.io/instance: inventory
      spec:
        containers:
        - args:
          - -c
          - until $(curl -o /dev/null -s -I -f http://127.0.0.1:15000); do echo \"Waiting
            for Istio Sidecar...\"; sleep 1; done; sleep 10; /deployments/run-java.sh -Dquarkus.http.host=0.0.0.0
          command:
          - /bin/bash
          image: quay.io/aslakknutsen/workshop-inventory:v1
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - curl
              - -f
              - http://127.0.0.1:8080/q/health/live
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: inventory
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - curl
              - -f
              - http://127.0.0.1:8080/q/health/ready
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /work/config
            name: volume-app-config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: inventory
          name: volume-app-config
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: inventory-mariadb
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory-mariadb
      app.kubernetes.io/part-of: inventory
      app.kubernetes.io/name: mariadb
  spec:
    strategy:
      type: Recreate
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ConfigChange
    replicas: 1
    revisionHistoryLimit: 10
    test: false
    selector:
      app: inventory
      app.kubernetes.io/instance: inventory-mariadb
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: inventory
          app.kubernetes.io/instance: inventory-mariadb
      spec:
        volumes:
          - name: inventory-mariadb-data
            emptyDir: {}
        containers:
          - resources:
              limits:
                memory: 512Mi
            readinessProbe:
              exec:
                command:
                  - /bin/sh
                  - '-i'
                  - '-c'
                  - >-
                    MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER
                    -D $MYSQL_DATABASE -e 'SELECT 1'
              initialDelaySeconds: 5
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            terminationMessagePath: /dev/termination-log
            name: mariadb
            livenessProbe:
              tcpSocket:
                port: 3306
              initialDelaySeconds: 30
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            ports:
              - containerPort: 3306
                protocol: TCP
            imagePullPolicy: Always
            volumeMounts:
              - name: inventory-mariadb-data
                mountPath: /var/lib/mysql/data
            terminationMessagePolicy: File
            image: image-registry.openshift-image-registry.svc:5000/openshift/mariadb:latest
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
    name: inventory
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: inventory
      app.kubernetes.io/instance: inventory
    sessionAffinity: None
    type: ClusterIP
- kind: Service
  apiVersion: v1
  metadata:
    name: inventory-mariadb
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory-mariadb
      app.kubernetes.io/part-of: inventory
    annotations:
      template.openshift.io/expose-uri: 'mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mariadb")].port}'
  spec:
    ports:
      - name: mariadb
        protocol: TCP
        port: 3306
        targetPort: 3306
    selector:
      app: inventory
      app.kubernetes.io/instance: inventory-mariadb
    type: ClusterIP
    sessionAffinity: None
- apiVersion: v1
  data:
    application.properties: |
      quarkus.datasource.url=jdbc:mariadb://inventory-mariadb:3306/inventorydb
      quarkus.datasource.username=inventory
      quarkus.datasource.password=inventory
  kind: ConfigMap
  metadata:
    name: inventory
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
- kind: Secret
  apiVersion: v1
  metadata:
    name: inventory-mariadb
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
    annotations:
      template.openshift.io/expose-database_name: '{.data[''database-name'']}'
      template.openshift.io/expose-password: '{.data[''database-password'']}'
      template.openshift.io/expose-root_password: '{.data[''database-root-password'']}'
      template.openshift.io/expose-username: '{.data[''database-user'']}'
  data:
    database-name: aW52ZW50b3J5ZGI=
    database-password: aW52ZW50b3J5
    database-root-password: aW52ZW50b3J5
    database-user: aW52ZW50b3J5
  type: Opaque
- apiVersion: v1
  data:
    COMPONENT_INVENTORY_HOST: aW52ZW50b3J5
    COMPONENT_INVENTORY_PORT: ODA4MA==
  kind: Secret
  metadata:
    annotations:
      component-port: "8080"
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
    name: inventory-8080
  type: Opaque
- apiVersion: v1
  data:
    COMPONENT_INVENTORY_HOST: aW52ZW50b3J5
    COMPONENT_INVENTORY_PORT: ODQ0Mw==
  kind: Secret
  metadata:
    annotations:
      component-port: "8443"
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
    name: inventory-8443
  type: Opaque
- apiVersion: v1
  data:
    COMPONENT_INVENTORY_HOST: aW52ZW50b3J5
    COMPONENT_INVENTORY_PORT: ODc3OA==
  kind: Secret
  metadata:
    annotations:
      component-port: "8778"
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/part-of: inventory
    name: inventory-8778
  type: Opaque
- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: inventory
  spec:
    host: inventory
    subsets:
    - name: v1
      labels:
        version: v1
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: inventory
  spec:
    hosts:
    - inventory
    http:
    - route:
      - destination:
          host: inventory
          subset: v1
